--- a/styles/style.css
+++ b/styles/style.css
@@ -1137,6 +1137,7 @@ p {
 /* MAIN MENU SLIDER */
 
 .mainmenuSlider {
+    display: block;
     position: absolute;
     left: 0;
     bottom: 20px;
@@ -1144,6 +1145,7 @@ p {
 }
 
 .mainmenuSlider_fixed {
+    display: block!important;
     position: fixed;
     z-index: 100;
     bottom: 0;
@@ -1211,6 +1213,12 @@ p {
     }
     .mainmenuSlider__title {
         font-size: 11px;
+    }
+}
+
+@media screen and (max-height:570px) {
+    .mainmenuSlider {
+     display: none;
     }
 }
 
