--- a/styles/style.css
+++ b/styles/style.css
@@ -14,18 +14,6 @@
     font-display: swap;
 }
 
-/* roboto-100 - latin */
-
-@font-face {
-    font-family: 'Roboto';
-    font-style: normal;
-    font-weight: 100;
-    src: local('Roboto Thin'), local('Roboto-Thin'), url('../fonts/roboto-v20-latin-100.woff2') format('woff2'), /* Chrome 26+, Opera 23+, Firefox 39+ */
-    url('../fonts/roboto-v20-latin-100.woff') format('woff');
-    /* Chrome 6+, Firefox 3.6+, IE 9+, Safari 5.1+ */
-    font-display: swap;
-}
-
 /* roboto-100italic - latin */
 
 @font-face {
@@ -34,42 +22,6 @@
     font-weight: 100;
     src: local('Roboto Thin Italic'), local('Roboto-ThinItalic'), url('../fonts/roboto-v20-latin-100italic.woff2') format('woff2'), /* Chrome 26+, Opera 23+, Firefox 39+ */
     url('../fonts/roboto-v20-latin-100italic.woff') format('woff');
-    /* Chrome 6+, Firefox 3.6+, IE 9+, Safari 5.1+ */
-    font-display: swap;
-}
-
-/* roboto-300 - latin */
-
-@font-face {
-    font-family: 'Roboto';
-    font-style: normal;
-    font-weight: 300;
-    src: local('Roboto Light'), local('Roboto-Light'), url('../fonts/roboto-v20-latin-300.woff2') format('woff2'), /* Chrome 26+, Opera 23+, Firefox 39+ */
-    url('../fonts/roboto-v20-latin-300.woff') format('woff');
-    /* Chrome 6+, Firefox 3.6+, IE 9+, Safari 5.1+ */
-    font-display: swap;
-}
-
-/* roboto-300italic - latin */
-
-@font-face {
-    font-family: 'Roboto';
-    font-style: italic;
-    font-weight: 300;
-    src: local('Roboto Light Italic'), local('Roboto-LightItalic'), url('../fonts/roboto-v20-latin-300italic.woff2') format('woff2'), /* Chrome 26+, Opera 23+, Firefox 39+ */
-    url('../fonts/roboto-v20-latin-300italic.woff') format('woff');
-    /* Chrome 6+, Firefox 3.6+, IE 9+, Safari 5.1+ */
-    font-display: swap;
-}
-
-/* roboto-regular - latin */
-
-@font-face {
-    font-family: 'Roboto';
-    font-style: normal;
-    font-weight: 400;
-    src: local('Roboto'), local('Roboto-Regular'), url('../fonts/roboto-v20-latin-regular.woff2') format('woff2'), /* Chrome 26+, Opera 23+, Firefox 39+ */
-    url('../fonts/roboto-v20-latin-regular.woff') format('woff');
     /* Chrome 6+, Firefox 3.6+, IE 9+, Safari 5.1+ */
     font-display: swap;
 }
@@ -98,30 +50,6 @@
     font-display: swap;
 }
 
-/* roboto-700italic - latin */
-
-@font-face {
-    font-family: 'Roboto';
-    font-style: italic;
-    font-weight: 700;
-    src: local('Roboto Bold Italic'), local('Roboto-BoldItalic'), url('../fonts/roboto-v20-latin-700italic.woff2') format('woff2'), /* Chrome 26+, Opera 23+, Firefox 39+ */
-    url('../fonts/roboto-v20-latin-700italic.woff') format('woff');
-    /* Chrome 6+, Firefox 3.6+, IE 9+, Safari 5.1+ */
-    font-display: swap;
-}
-
-/* montserrat-300 - latin */
-
-@font-face {
-    font-family: 'Montserrat';
-    font-style: normal;
-    font-weight: 300;
-    src: local('Montserrat Light'), local('Montserrat-Light'), url('../fonts/montserrat-v14-latin-300.woff2') format('woff2'), /* Chrome 26+, Opera 23+, Firefox 39+ */
-    url('../fonts/montserrat-v14-latin-300.woff') format('woff');
-    /* Chrome 6+, Firefox 3.6+, IE 9+, Safari 5.1+ */
-    font-display: swap;
-}
-
 /* montserrat-regular - latin */
 
 @font-face {
@@ -134,17 +62,6 @@
     font-display: swap;
 }
 
-/* montserrat-500 - latin */
-
-@font-face {
-    font-family: 'Montserrat';
-    font-style: normal;
-    font-weight: 500;
-    src: local('Montserrat Medium'), local('Montserrat-Medium'), url('../fonts/montserrat-v14-latin-500.woff2') format('woff2'), /* Chrome 26+, Opera 23+, Firefox 39+ */
-    url('../fonts/montserrat-v14-latin-500.woff') format('woff');
-    /* Chrome 6+, Firefox 3.6+, IE 9+, Safari 5.1+ */
-    font-display: swap;
-}
 
 /* montserrat-700 - latin */
 
@@ -158,72 +75,6 @@
     font-display: swap;
 }
 
-/* GENERAL STYLES */
-
-*, *:before, *:after {
-    box-sizing: border-box;
-}
-
-html {
-    font-size: 10px;
-}
-
-body {
-    padding: 0;
-    font-family: 'Montserrat', sans-serif;
-    font-size: 15px;
-    line-height: 1.6;
-    color: #333333;
-}
-
-a {
-    text-decoration: none;
-    cursor: pointer;
-}
-
-a:visited {
-    text-decoration: none;
-}
-
-h1, h2, h3, h4, h5, h6 {
-    margin: 0;
-}
-
-ul {
-    padding: 0;
-}
-
-li {
-    list-style-type: none;
-}
-
-p {
-    margin: 0;
-}
-
-@media screen and (max-width:1000px) {
-    html {
-        font-size: 7px;
-    }
-}
-
-@media screen and (max-width:790px) {
-    html {
-        font-size: 5px;
-    }
-}
-
-@media screen and (max-width:530px) {
-    html {
-        font-size: 4px;
-    }
-}
-
-@media screen and (max-width:450px) {
-    html {
-        font-size: 3px;
-    }
-}
 
 /* GENERAL BLOCKS */
 
@@ -235,19 +86,11 @@ p {
     background: #f38181;
 }
 
-/*SECTION, CONTAINER*/
+/*SECTION*/
 
 section {
     margin: 0 auto;
     max-width: 1920px;
-}
-
-.container {
-    width: 100%;
-    height: 100%;
-    max-width: 1230px;
-    margin: 0 auto;
-    padding: 0 15px;
 }
 
 .section__header {
@@ -893,353 +736,6 @@ section {
         transform: scale(2);
         -webkit-transform-origin: 100% 100%;
         transform-origin: 100% 100%
-    }
-}
-
-/* INTRO */
-
-.intro {
-    margin: 0 auto;
-    max-width: 1920px;
-    height: 100vh;
-    max-height: 1200px;
-    display: -webkit-box;
-    display: flex;
-    padding-top: 185px;
-    position: relative;
-    overflow: hidden;
-}
-
-.intro__background {
-    background: -webkit-gradient(linear, left top, left bottom, from(rgba(243, 129, 129, 0.85)), to(rgba(252, 227, 138, 0.85))), url("../img/intro/mainBackground.webp") center;
-    background: linear-gradient(to bottom, rgba(243, 129, 129, 0.85) 0%, rgba(252, 227, 138, 0.85) 100%), url("../img/intro/mainBackground.webp") center;
-    background-size: cover;
-    width: 100%;
-    height: 100vh;
-    position: absolute;
-    top: 0;
-    left: 0;
-    z-index: -1;
-}
-
-.intro__innerContainer {
-    width: 100%;
-    max-width: 830px;
-    margin: 0 auto;
-}
-
-.intro__btn {
-    font-size: 14px;
-    text-transform: uppercase;
-    font-weight: bold;
-    padding: 8px 25px;
-    border: 3px solid white;
-    color: white;
-    display: block;
-    margin: 50px auto;
-    width: 160px;
-    background-color: transparent;
-    -webkit-transition: background-color 0.3s linear, color 0.3s linear;
-    transition: background-color 0.3s linear, color 0.3s linear;
-}
-
-.intro__btn:hover {
-    background-color: white;
-    color: black;
-}
-
-.intro__suptitle {
-    font-family: 'Kaushan Script', cursive;
-    font-weight: 400;
-    font-size: 7.2rem;
-    color: white;
-    text-align: center;
-}
-
-.intro__title {
-    font-size: 15rem;
-    font-weight: bold;
-    color: white;
-    margin: 0;
-    padding: 0;
-    text-align: center;
-    text-transform: uppercase;
-    line-height: 1;
-}
-
-.intro__title:after {
-    content: "";
-    display: block;
-    width: 60px;
-    height: 3px;
-    background: white;
-    margin: 0 auto;
-    margin-top: 35px;
-}
-
-@media screen and (max-width:790px) {
-    .intro {
-        padding-top: 270px;
-    }
-    .intro__background {
-        background: -webkit-gradient(linear, left top, left bottom, from(rgba(243, 129, 129, 0.85)), to(rgba(252, 227, 138, 0.85))), url("../img/intro/mainBackground-790.webp") center no-repeat;
-        background: linear-gradient(to bottom, rgba(243, 129, 129, 0.85) 0%, rgba(252, 227, 138, 0.85) 100%), url("../img/intro/mainBackground-790.webp") center no-repeat;
-    }
-}
-
-@media screen and (max-width:530px) {
-    .intro__background {
-        background: -webkit-gradient(linear, left top, left bottom, from(rgba(243, 129, 129, 0.85)), to(rgba(252, 227, 138, 0.85))), url("../img/intro/mainBackground-530.webp") center no-repeat;
-        background: linear-gradient(to bottom, rgba(243, 129, 129, 0.85) 0%, rgba(252, 227, 138, 0.85) 100%), url("../img/intro/mainBackground-530.webp") center no-repeat;
-    }
-}
-
-@media screen and (max-width:450px) {
-    .intro__btn {
-        margin: 35px auto;
-    }
-}
-
-@media screen and (max-height:450px) {
-    .intro {
-        padding-top: 80px;
-    }
-    .intro__suptitle {
-        font-size: 20px;
-    }
-    .intro__title {
-        font-size: 30px;
-    }
-    .intro__btn {
-        margin: 25px auto;
-    }
-}
-
-/* HEADER */
-
-.header {
-    position: absolute;
-    top: 0;
-    left: 0;
-    right: 0;
-    width: 100%;
-    padding: 30px 0 20px;
-}
-
-.header_fixed {
-    position: fixed;
-    z-index: 100;
-    padding: 5px 0 5px;
-    background: -webkit-gradient(linear, left top, left bottom, from(rgba(243, 129, 129, 0.8)), to(rgba(232, 137, 131, 0.8)));
-    background: linear-gradient(to bottom, rgba(243, 129, 129, 0.8), rgba(232, 137, 131, 0.8));
-}
-
-.header__innerContainer {
-    display: -webkit-box;
-    display: flex;
-    -webkit-box-align: center;
-    align-items: center;
-    -webkit-box-pack: justify;
-    justify-content: space-between;
-}
-
-.header__logoTitle {
-    margin: 0;
-    height: -webkit-fit-content;
-    height: -moz-fit-content;
-    height: fit-content;
-    color: white;
-}
-
-.header__logoLink {
-    font-size: 30px;
-    font-weight: bold;
-    color: white;
-}
-
-.nav {
-    position: relative;
-}
-
-.nav__menuToggle {
-    cursor: pointer;
-    display: none;
-    font-size: 14px;
-    text-transform: uppercase;
-    color: white;
-}
-
-.nav__menuToggle:hover {
-    color: #fce38a;
-    border-bottom: 3px solid#fce38a;
-}
-
-.nav__menuIcon {
-    display: block;
-    margin-right: 10px;
-    width: 20px;
-}
-
-.nav__menuText {
-    display: block;
-}
-
-.nav__menuLink {
-    display: inline-block;
-    vertical-align: top;
-    margin: 0 23px;
-    padding: 10px 0;
-    list-style-type: none;
-    font-size: 14px;
-    text-transform: uppercase;
-    color: white;
-    -webkit-transition: color, border-bottom 0.2s linear;
-    transition: color, border-bottom 0.2s linear;
-}
-
-.nav__menuLink_active {
-    color: #fce38a;
-    border-bottom: 3px solid#fce38a;
-}
-
-.nav__menuLink:hover {
-    color: #fce38a;
-    border-bottom: 3px solid#fce38a;
-}
-
-@media screen and (min-width:790px) {
-    .nav__menu {
-        background: none;
-    }
-}
-
-@media screen and (max-width:790px) {
-    .nav__menu {
-        display: none;
-        position: absolute;
-        padding: 0 5px 10px;
-    }
-    .nav__menuToggle {
-        display: -webkit-box;
-        display: flex;
-        -webkit-box-align: center;
-        align-items: center;
-        width: 80px;
-        line-height: 3;
-    }
-    .nav__menuLink {
-        display: block;
-        margin: 0;
-        padding: 4px 0;
-        text-align: center;
-    }
-    .nav__menuLink:hover {
-        color: white;
-        border-bottom: none;
-    }
-    .nav__menuToggle:hover {
-        color: white;
-        border-bottom: none;
-    }
-    .nav__menuIcon {
-        margin: 0 auto;
-    }
-    .nav__menuIcon_search {
-        padding-left: 3px;
-        padding-top: 3px;
-    }
-}
-
-/* MAIN MENU SLIDER */
-
-.mainmenuSlider {
-    display: block;
-    position: absolute;
-    left: 0;
-    bottom: 20px;
-    width: 100%;
-}
-
-.mainmenuSlider_fixed {
-    display: block!important;
-    position: fixed;
-    z-index: 100;
-    bottom: 0;
-    background: #95e1d3;
-}
-
-.mainmenuSlider__wrapper {
-    max-width: 1200px;
-    display: -webkit-box;
-    display: flex;
-    -webkit-box-pack: justify;
-    justify-content: space-between;
-    margin: 10px -10px 0;
-}
-
-.mainmenuSlider__item {
-    border-top: 3px solid white;
-    width: calc(25% - 20px);
-    margin: 0 10px;
-    padding-top: 10px;
-    opacity: 0.7;
-    position: relative;
-    background: inherit;
-}
-
-.mPS2id-highlight:before {
-    content: "";
-    display: block;
-    width: 100%;
-    height: 3px;
-    background: #f38181;
-    position: absolute;
-    top: -3px;
-    left: 0;
-    z-index: 1;
-}
-
-.mainmenuSlider__number {
-    color: white;
-    font-size: 24px;
-    font-weight: bold;
-}
-
-.mainmenuSlider__title {
-    color: white;
-    font-size: 18px;
-    text-transform: uppercase;
-}
-
-@media screen and (min-width:1920px) {
-    .mainmenuSlider {
-        width: 1920px;
-        left: calc((100% - 1920px) / 2);
-    }
-}
-
-@media screen and (max-width:790px) {
-    .mainmenuSlider__number {
-        display: none;
-    }
-}
-
-@media screen and (max-width:450px) {
-    .mainmenuSlider {
-        bottom: 0;
-        padding-bottom: 5px;
-    }
-    .mainmenuSlider__item {
-        padding-top: 0;
-    }
-    .mainmenuSlider__title {
-        font-size: 11px;
-    }
-}
-
-@media screen and (max-height:570px) {
-    .mainmenuSlider {
-        display: none;
     }
 }
 
